# aoc_2025

./: .gitignore  Cargo.toml  README.md
src/01/: main.rs
src/02/: main.rs
src/03/: main.rs
src/04/: main.rs
src/05/: main.rs
src/06/: main.rs
src/07/: main.rs
src/08/: main.rs
src/09/: main.rs
src/10/: main.rs
src/11/: main.rs
