[package]
version = "0.1.0"
name = "aoc_2025"
description = "advent of code 2025"
author = "jordibeen"
edition = "2024"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "01"
path = "./src/01/main.rs"

[[bin]]
name = "02"
path = "./src/02/main.rs"

[[bin]]
name = "03"
path = "./src/03/main.rs"

[[bin]]
name = "04"
path = "./src/04/main.rs"

[[bin]]
name = "05"
path = "./src/05/main.rs"

[[bin]]
name = "06"
path = "./src/06/main.rs"

[[bin]]
name = "07"
path = "./src/07/main.rs"

[[bin]]
name = "08"
path = "./src/08/main.rs"

[[bin]]
name = "09"
path = "./src/09/main.rs"

[[bin]]
name = "11"
path = "./src/11/main.rs"
